[tool.poetry]
name = "poetry-changelog-plugin"
version = "0.0.0"
description = ""
authors = ["Taras Bilobran <bilobran.taras.jj@gmail.com>"]
readme = "README.md"
package-mode = true
license = "MIT"
packages = [
    { include = "changelog_plugin" },
]

[tool.poetry.plugins."poetry.application.plugin"]
show-changelog = "changelog_plugin:MultiProjectPlugin"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.8.4"
httpx = {extras = ["http2"], version = "^0.27.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
